--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "animejs": "^3.1.0",
     "bootstrap": "^4.4.1",
     "gh-pages": "^2.1.1",
+    "lerp": "^1.0.3",
     "react": "^16.10.2",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.10.2",
