--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "personal-website",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://jacky.design",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.27",
     "@fortawesome/free-brands-svg-icons": "^5.12.1",
@@ -9,7 +10,6 @@
     "@material-ui/core": "^4.8.3",
     "animejs": "^3.1.0",
     "bootstrap": "^4.4.1",
-    "gh-pages": "^2.1.1",
     "lerp": "^1.0.3",
     "react": "^16.10.2",
     "react-bootstrap": "^1.0.0-beta.16",
@@ -42,6 +42,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^2.2.0",
     "three": "^0.113.2"
   }
 }
